--- a/sl/security/manager/chrome/pipnss/security.properties
+++ b/sl/security/manager/chrome/pipnss/security.properties
@@ -1,8 +1,7 @@
-#
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 Title=Varnostno opozorilo
-PostToInsecureFromSecureMessage=Čeprav je ta stran šifrirana, bodo podatki, ki ste jih vnesli, poslani preko nešifrirane povezave, zato jih utegnejo prebrati druge osebe.\#\#Ali ste prepričani, da želite poslati te podatke?\#\#
+PostToInsecureFromSecureMessage=Čeprav je ta stran šifrirana, bodo podatki, ki ste jih vnesli, poslani preko nešifrirane povezave, zato jih utegnejo prebrati druge osebe.##Ali ste prepričani, da želite poslati te podatke?##
 Continue=Nadaljuj
