--- a/sl/security/manager/chrome/pippki/pippki.properties
+++ b/sl/security/manager/chrome/pippki/pippki.properties
@@ -13,7 +13,7 @@ unnamedCA=Neimenovan overitelj
 #For editing cert trust
 editTrustWindowTitle=Urejanje zaupanja digitalnega potrdila
 editTrustCA=Digitalno potrdilo "%S" predstavlja overitelja.
-editTrustEmail=Izdajatelj digitalnega potrdila "%S" je\:
+editTrustEmail=Izdajatelj digitalnega potrdila "%S" je:
 issuerNotTrusted=Ker ne zaupate overitelju, ki izdaja to digitalno potrdilo, avtentičnosti tega digitalnega potrdila ne zaupate, razen če je to posebej označeno tukaj.
 issuerTrusted=Ker zaupate overitelju, ki je to digitalno potrdilo izdal, avtentičnosti le-tega zaupate, razen če ni tu drugače označeno.
 issuerNotKnown=Ker ne poznate overitelja, ki je izdal to digitalno potrdilo, le-temu ne priznavate avtentičnosti, razen če je tukaj drugače označeno.
@@ -50,7 +50,7 @@ file_browse_PKCS12_spec=Datoteke PKCS12
 resetPreferences=Ta gumb uporabite, da ponastavite varnostne nastavitve na njihove začetne vrednosti %S.
 
 #Cert verification
-certVerified=To digitalno potrdilo je bilo preverjeno za naslednje namene\:
+certVerified=To digitalno potrdilo je bilo preverjeno za naslednje namene:
 certNotVerified_CertRevoked=Tega digitalnega potrdila ni bilo mogoče preveriti, ker je bil razveljavljen.
 certNotVerified_CertExpired=Tega digitalnega potrdila ni bilo mogoče preveriti, ker je pretekel.
 certNotVerified_CertNotTrusted=Tega digitalnega potrdila ni bilo mogoče preveriti, ker ni vreden zaupanja.
@@ -61,8 +61,8 @@ certNotVerified_AlgorithmDisabled=Tega digitalnega potrdila ni bilo mogoče prev
 certNotVerified_Unknown=Tega digitalnega potrdila ni bilo mogoče preveriti iz neznanih razlogov.
 
 #Client auth
-clientAuthMessage1=Organizacija\: "%S"
-clientAuthMessage2=Izdano pod\: "%S"
+clientAuthMessage1=Organizacija: "%S"
+clientAuthMessage2=Izdano pod: "%S"
 
 #Page Info
 pageInfo_SiteNotVerified=Identiteta spletne strani ni preverjena
@@ -87,7 +87,7 @@ pageInfo_MixedContent=Povezava delno šifrirana
 pageInfo_Privacy_Mixed1=Deli strani, ki jo gledate, niso bili šifrirani pred prenosom.
 
 #Cert Viewer
-certDetails=Oglednik digitalnega potrdila\:
+certDetails=Oglednik digitalnega potrdila:
 notPresent=<Ni del digitalnega potrdila>
 unknownIssuer=<Neznan izdajatelj>
 
@@ -98,12 +98,12 @@ password_not_set=(ni nastavljeno)
 failed_pw_change=Ne morem spremeniti glavnega gesla.
 incorrect_pw=Niste vnesli pravega trenutnega glavnega gesla. Prosim, poskusite ponovno.
 pw_change_ok=Glavno geslo je bilo uspešno spremenjeno
-pw_erased_ok=Pozor\! Izbrisali ste glavno geslo.
-pw_not_wanted=Opozorilo\! Odločili ste se, da ne boste uporabljali glavnega gesla.
+pw_erased_ok=Pozor! Izbrisali ste glavno geslo.
+pw_not_wanted=Opozorilo! Odločili ste se, da ne boste uporabljali glavnega gesla.
 pw_empty_warning=Vaša spravljena spletna in e-poštna gesla, podatki obrazcev in zasebni ključi ne bodo zavarovani.
 pw_change2empty_in_fips_mode=Trenutno ste v načinu FIPS. FIPS zahteva glavno geslo, ki ni prazno.
 login_failed=Prijava neuspešna
-loadPK11TokenDialog=Izberite napravo za nalaganje PKCS\#11
+loadPK11TokenDialog=Izberite napravo za nalaganje PKCS#11
 devinfo_modname=Modul
 devinfo_modpath=Pot
 devinfo_label=Oznaka
@@ -135,7 +135,7 @@ importServerCertPrompt=Izberite datoteko z digitalnim potrdilom strežnika za uv
 file_browse_Certificate_spec=Datoteke z digitalnimi potrdili
 
 # Form Signing confirmation prompt
-formSigningIntro=Stran '%S' je zahtevala, da podpišete naslednje besedilno sporočilo\:
+formSigningIntro=Stran '%S' je zahtevala, da podpišete naslednje besedilno sporočilo:
 
 # Cert export
 SaveCertAs=Shrani digitalno potrdilo v datoteko
