--- a/sl/security/manager/chrome/pipnss/pipnss.properties
+++ b/sl/security/manager/chrome/pipnss/pipnss.properties
@@ -62,12 +62,12 @@ CertDumpVersion2=Različica 2
 CertDumpVersion3=Različica 3
 CertDumpSerialNo=Serijska številka
 CertDumpOID=Identifikacija predmeta
-CertDumpMD2WithRSA=PKCS \#1 MD2 s šifriranjem RSA
-CertDumpMD5WithRSA=PKCS \#1 MD5 s šifriranjem RSA
-CertDumpSHA1WithRSA=PKCS \#1 SHA-1 s šifriranjem RSA
-CertDumpSHA256WithRSA=PKCS \#1 SHA-256 s šifriranjem RSA
-CertDumpSHA384WithRSA=PKCS \#1 SHA-384 s šifriranjem RSA
-CertDumpSHA512WithRSA=PKCS \#1 SHA-512 s šifriranjem RSA
+CertDumpMD2WithRSA=PKCS #1 MD2 s šifriranjem RSA
+CertDumpMD5WithRSA=PKCS #1 MD5 s šifriranjem RSA
+CertDumpSHA1WithRSA=PKCS #1 SHA-1 s šifriranjem RSA
+CertDumpSHA256WithRSA=PKCS #1 SHA-256 s šifriranjem RSA
+CertDumpSHA384WithRSA=PKCS #1 SHA-384 s šifriranjem RSA
+CertDumpSHA512WithRSA=PKCS #1 SHA-512 s šifriranjem RSA
 CertDumpDefOID=Identifikacija predmeta (%S)
 CertDumpNULL=NULL
 CertDumpIssuer=Izdajatelj
@@ -97,7 +97,7 @@ CertDumpRSAEncr=PKCS #1 RSA šifriranje
 CertDumpRSAPSSSignature=PKCS #1 RSASSA-PSS podpis
 CertDumpRSATemplate=Osnova (%S bitov):\n%S\nStopnja (%S bitov):\n%S
 CertDumpECTemplate=Velikost ključa (v bitih): %S\nDolžina reda izhodiščne točke (v bitih): %S\nJavna vrednost:\n%S
-CertDumpIssuerUniqueID=Unikatna identifikacija izdajatelja\:
+CertDumpIssuerUniqueID=Unikatna identifikacija izdajatelja:
 CertDumpSubjPubKey=Subjektov javni ključ
 CertDumpSubjectUniqueID=Subjektova unikatna identifikacija
 CertDumpExtensions=Razširitve
@@ -128,8 +128,8 @@ CertDumpKUCRLSigner=Podpisnik CRL
 CertDumpCritical=Kritično
 CertDumpNonCritical=Ni kritično
 CertDumpSigAlg=Algoritem podpisa digitalnega potrdila
-CertDumpCertSig=Vrednost podpisa digitalnega potrdila\:
-CertDumpExtensionFailure=Napaka\: Ne morem procesirati končnice
+CertDumpCertSig=Vrednost podpisa digitalnega potrdila:
+CertDumpExtensionFailure=Napaka: Ne morem procesirati končnice
 CertDumpIsCA=Je uradna oseba za digitalna potrdila
 CertDumpIsNotCA=Ni uradna oseba za digitalna potrdila
 CertDumpPathLen=Največje število vmesnih uradnih oseb: %S
@@ -260,16 +260,16 @@ VerifiedFalse=neresnično
 PK11BadPassword=Vnešeno geslo je napačno.
 SuccessfulP12Backup=Vaša varnostna digitalna potrdila in zasebni ključi so bili uspešno shranjeni kot varnostne kopije.
 SuccessfulP12Restore=Vaša varnostna digitalna potrdila in zasebni ključi so bili uspešno obnovljeni.
-PKCS12PasswordInvalid=Ne morem dekodirati datoteke PKCS \#12. Morda je vpisano geslo napačno?
-PKCS12DecodeErr=Datoteke ne morem dekodirati. Lahko, da ni v formatu PKCS \#12, morda je bila poškodovana, ali pa vnešeno geslo ni bilo pravilno.
-PKCS12UnknownErrRestore=Datoteke PKCS \#12 ni mogoče obnovititi zaradi neznanih razlogov.
-PKCS12UnknownErrBackup=Varnostne kopije PKCS \#12 ni bilo mogoče narediti zaradi neznanih vzrokov.
-PKCS12UnknownErr=Operacija PKCS \#12 ni uspela iz neznanih razlogov.
+PKCS12PasswordInvalid=Ne morem dekodirati datoteke PKCS #12. Morda je vpisano geslo napačno?
+PKCS12DecodeErr=Datoteke ne morem dekodirati. Lahko, da ni v formatu PKCS #12, morda je bila poškodovana, ali pa vnešeno geslo ni bilo pravilno.
+PKCS12UnknownErrRestore=Datoteke PKCS #12 ni mogoče obnovititi zaradi neznanih razlogov.
+PKCS12UnknownErrBackup=Varnostne kopije PKCS #12 ni bilo mogoče narediti zaradi neznanih vzrokov.
+PKCS12UnknownErr=Operacija PKCS #12 ni uspela iz neznanih razlogov.
 PKCS12InfoNoSmartcardBackup=Digitalnih potrdil ni mogoče shraniti kot varnostno kopijo iz strojnih varnostnih naprav, kot so 'pametne kartice' (smart cards).
 PKCS12DupData=Digitalno potrdilo in zasebni ključ že obstajata na varnostni napravi.
 AddModulePrompt=Ste prepričani, da želite namestiti ta varnostni modul?
-AddModuleName=Ime modula\: %S
-AddModulePath=Pot\: %S
+AddModuleName=Ime modula: %S
+AddModulePath=Pot: %S
 AddModuleSuccess=Nov varnostni modul je bil nameščen
 AddModuleFailure=Nemogoče je dodati modul
 AddModuleDup=Varnostni modul že obstaja
@@ -283,7 +283,7 @@ ForcedBackup2=Če kdajkoli izgubite dostop do svojega zasebnega ključa zaradi t
 ForcedBackup3=Če želite, da se naredi kopija, pritisnite 'V redu'. Če je mogoče, shranite varnostno kopijo na disketo, ki jo shranite na varnem mestu.
 UnknownCertIssuer=(neznan izdajatelj)
 UnknownCertOrg=(neznana organizacija)
-AVATemplate=%S \= %S
+AVATemplate=%S = %S
 
 PSMERR_SSL_Disabled=Varna povezava ni mogoča, ker je bil protokol SSL onemogočen.
 PSMERR_SSL2_Disabled=Varna povezava ni mogoča, ker stran uporablja starejšo, nevarno različico protokola SSL.
@@ -316,14 +316,14 @@ certErrorNotYetValidNow=Digitalno potrdilo ne bo veljavno do %1$S. Danes smo %2$
 
 certErrorCodePrefix=(Koda napake: %S)
 
-CertInfoIssuedFor=Izdano komu\:
-CertInfoIssuedBy=Izdajatelj\:
+CertInfoIssuedFor=Izdano komu:
+CertInfoIssuedBy=Izdajatelj:
 CertInfoValid=Veljavno
 CertInfoFrom=od
 CertInfoTo=do
 CertInfoPurposes=Nameni
 CertInfoEmail=e-pošta
-CertInfoStoredIn=Shranjen v\:
+CertInfoStoredIn=Shranjen v:
 P12DefaultNickname=Uvoženo digitalno potrdilo
 VerifyExpired=<pretečeno>
 VerifyRevoked=<preklicano>
