--- a/sl/toolkit/chrome/cookie/cookieAcceptDialog.properties
+++ b/sl/toolkit/chrome/cookie/cookieAcceptDialog.properties
@@ -2,8 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-hostColon=Gostitelj\:
-domainColon=Domena\:
+hostColon=Gostitelj:
+domainColon=Domena:
 forSecureOnly=Le šifrirane povezave
 forAnyConnection=Katerakoli vrsta povezave
 expireAtEndOfSession=ob koncu seje
