--- a/sl/toolkit/chrome/global/devtools/csscoverage.properties
+++ b/sl/toolkit/chrome/global/devtools/csscoverage.properties
@@ -5,15 +5,17 @@
 # LOCALIZATION NOTE These strings are used in the 'csscoverage' command and in
 # the user interface that this command creates.
 
-# LOCALIZATION NOTE (csscoverageDesc, csscoverageStartDesc, csscoverageStopDesc,
-# csscoverageOneShotDesc, csscoverageToggleDesc, csscoverageReportDesc): Short
-# descriptions of the csscoverage commands
+# LOCALIZATION NOTE (csscoverageDesc, csscoverageStartDesc2,
+# csscoverageStopDesc2, csscoverageOneShotDesc2, csscoverageToggleDesc2,
+# csscoverageReportDesc2): Short descriptions of the csscoverage commands
 csscoverageDesc=Upravljanje analize pokritosti CSS
-csscoverageStartDesc=Začni analizo pokritosti CSS
-csscoverageStopDesc=Končaj analizo pokritosti CSS
-csscoverageOneShotDesc=Končaj analizo pokritosti CSS
-csscoverageToggleDesc=Preklopi analizo pokritosti CSS
-csscoverageReportDesc=Prikaži poročilo analize pokritosti CSS
+csscoverageStartDesc2=Začni zbiranje podatkov o pokritosti CSS
+csscoverageStopDesc2=Končaj zbiranje podatkov o pokritosti CSS
+csscoverageOneShotDesc2=Zbiraj takojšnje podatke o pokritosti CSS
+csscoverageToggleDesc2=Preklopi zbiranje podatkov o pokritosti CSS
+csscoverageReportDesc2=Prikaži poročilo o pokritosti CSS
+csscoverageStartNoReloadDesc=Ne začni s ponovnim nalaganjem strani
+csscoverageStartNoReloadManual=Najbolje je začeti s ponovnim nalaganjem trenutne strani, ker se bo tako test začel na znani točki, vendar je včasih bolje, da tega ne storimo, npr. če je stran v stanju, ki se bo izgubilo ob ponovnem nalaganju
 
 # LOCALIZATION NOTE (csscoverageRunningReply, csscoverageDoneReply): Text that
 # describes the current state of the css coverage system
@@ -27,3 +29,4 @@ csscoverageRunningError=Analiza pokritosti CSS se že izvaja
 csscoverageNotRunningError=Analiza pokritosti CSS se ne izvaja
 csscoverageNotRunError=Analiza pokritosti CSS še ni bila opravljena
 csscoverageNoRemoteError=Tarča ne podpira pokritosti CSS
+csscoverageOneShotReportError=Poročilo o pokritosti CSS ni na voljo za 'takojšnje' podatke. Uporabite začni/končaj.
