--- a/es-MX/mobile/android/chrome/browser.properties
+++ b/es-MX/mobile/android/chrome/browser.properties
@@ -199,7 +199,7 @@ contextmenu.shareImage=Share Image
 contextmenu.search=%S buscar
 contextmenu.saveImage=Guardar imagen
 contextmenu.setImageAs=Establecer imagen como
-contextmenu.addSearchEngine=Añadir Motor de Búsqueda
+contextmenu.addSearchEngine2=Añadir motor de búsqueda
 contextmenu.playMedia=Reproducir
 contextmenu.pauseMedia=Pausa
 contextmenu.shareMedia=Share Video
@@ -241,16 +241,6 @@ timer.start=%S: temporizador comenzado
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$Sms
-
-# Webapps
-webapps.installTitle=Install Application
-webapps.alertSuccess=Successfully installed
-# Shown when there is a generic problem installing an app
-webapps.installError=Error installing application
-# Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Invalid application manifest
-# Shown when a network error prevented installing an app
-webapps.networkInstallError=Could not download manifest
 
 # Click to play plugins
 clickToPlayPlugins.message2=%S posee contenido de plugin. ¿Te gustaría activarlo?
