[hy-AM] update from Pootle (mobile)

--- a/hy-AM/mobile/android/chrome/webapp.properties
+++ b/hy-AM/mobile/android/chrome/webapp.properties
@@ -42,7 +42,7 @@ installUpdateTitle=#1 թարմացումը ներբեռնվել է;#1 թարմա
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which to install an update.
 # example: Touch to install updates for Foo, Bar, Baz
-installUpdateMessage2=Հպվեք՝  %1$S-ի թարմացումը տեղակայելու համար;Հպվեք՝  %1$S-ի թարմացումները տեղակայելու համար
+installUpdateMessage2=Դիպչեք՝ %1$S-ի թարմացումը տեղակայելու համար: Դիպչեք՝  %1$S-ի թարմացումները տեղակայելու համար
 
 # LOCALIZATION NOTE (retrievalFailedTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
