[ta] update from Pootle (mobile)

--- a/ta/mobile/android/chrome/localepicker.properties
+++ b/ta/mobile/android/chrome/localepicker.properties
@@ -10,7 +10,7 @@ continueIn=%S ல் தொடர்க
 name=ஆங்கிலம்
 choose=வேறுப்பட்ட ஒரு மொழியை தேர்ந்தெடு
 chooseLanguage=மொழியை தேர்ந்தெடு
-cancel=இரத்துசெய்
+cancel=ரத்து
 continue=தொடரவும்
 installing=நிறுவுகிறது: %S
 installerror=மொழியை நிறுவுவதில் பிழை
