--- a/ta/mobile/android/chrome/pippki.properties
+++ b/ta/mobile/android/chrome/pippki.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 nssdialogs.ok.label=சரி
-nssdialogs.cancel.label=இரத்துசெய்
+nssdialogs.cancel.label=ரத்து
 
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/pippki.dtd
 downloadCert.title=சான்றிதழ் பதிவிறக்கம் செய்யப்படுகிறது
