--- a/sl/mobile/android/chrome/browser.properties
+++ b/sl/mobile/android/chrome/browser.properties
@@ -199,7 +199,7 @@ contextmenu.shareImage=Deli sliko
 contextmenu.search=Išči z iskalnikom %S
 contextmenu.saveImage=Shrani sliko
 contextmenu.setImageAs=Nastavi sliko kot
-contextmenu.addSearchEngine=Dodaj iskalnik
+contextmenu.addSearchEngine2=Dodaj kot iskalnik
 contextmenu.playMedia=Predvajaj
 contextmenu.pauseMedia=Ustavi
 contextmenu.shareMedia=Deli video
@@ -241,16 +241,6 @@ timer.start=%S: časomer zagnan
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$S ms
-
-# Webapps
-webapps.installTitle=Namesti aplikacijo
-webapps.alertSuccess=Namestitev uspela
-# Shown when there is a generic problem installing an app
-webapps.installError=Napaka pri nameščanju aplikacije
-# Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Neveljaven manifest aplikacije
-# Shown when a network error prevented installing an app
-webapps.networkInstallError=Manifesta ni bilo mogoče prenesti
 
 # Click to play plugins
 clickToPlayPlugins.message2=%S vsebuje vsebino vtičnika. Jo želite omogočiti?
