[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/devtools/debugger.properties
+++ b/sv-SE/browser/chrome/browser/devtools/debugger.properties
@@ -17,6 +17,7 @@ ToolboxDebugger.label=Avlusare
 
 # LOCALIZATION NOTE (ToolboxDebugger.panelLabel):
 # This is used as the label for the toolbox panel.
+ToolboxDebugger.panelLabel=Avlusarpanel
 
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
@@ -301,7 +302,7 @@ variablesSeparatorLabel=:
 
 # LOCALIZATION NOTE (watchExpressionsSeparatorLabel): The text that is displayed
 # in the watch expressions list as a separator between the code and evaluation.
-watchExpressionsSeparatorLabel=\u0020→
+watchExpressionsSeparatorLabel= →
 
 # LOCALIZATION NOTE (functionSearchSeparatorLabel): The text that is displayed
 # in the functions search panel as a separator between function's inferred name
