--- a/sv-SE/browser/chrome/browser/devtools/projecteditor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/projecteditor.properties
@@ -19,14 +19,17 @@ projecteditor.deleteLabel=Ta bort
 # LOCALIZATION NOTE (projecteditor.deletePromptTitle):
 # This string is displayed as as the title of the confirm prompt that checks
 # to make sure if a file or folder should be removed.
+projecteditor.deletePromptTitle=Ta bort
 
 # LOCALIZATION NOTE (projecteditor.deleteFolderPromptMessage):
 # This string is displayed as as the message of the confirm prompt that checks
 # to make sure if a folder should be removed.
+projecteditor.deleteFolderPromptMessage=Är du säker på att du vill ta bort denna mapp?
 
 # LOCALIZATION NOTE (projecteditor.deleteFilePromptMessage):
 # This string is displayed as as the message of the confirm prompt that checks
 # to make sure if a file should be removed.
+projecteditor.deleteFilePromptMessage=Är du säker på att du vill ta bort den här filen?
 
 # LOCALIZATION NOTE (projecteditor.newLabel):
 # This string is displayed as a menu item for adding a new file to
