--- a/sv-SE/browser/chrome/browser/devtools/styleeditor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/styleeditor.properties
@@ -75,6 +75,7 @@ ToolboxStyleEditor.label=Stileditor
 
 # LOCALIZATION NOTE (ToolboxStyleEditor.panelLabel):
 # This is used as the label for the toolbox panel.
+ToolboxStyleEditor.panelLabel=Stilredigeringspanel
 
 # LOCALIZATION NOTE (ToolboxStyleEditor.tooltip2):
 # This string is displayed in the tooltip of the tab when the style editor is
