--- a/sv-SE/browser/chrome/browser/newTab.properties
+++ b/sv-SE/browser/chrome/browser/newTab.properties
@@ -7,4 +7,4 @@ newtab.unpin=Lösgör webbplatsen
 newtab.block=Ta bort webbplatsen
 newtab.show=Visa fliken Ny sida
 newtab.hide=Dölj fliken Ny sida
-newtab.sponsored=Visa information på sponsrade titlar\u0020
+newtab.sponsored=Visa information på sponsrade titlar 
