--- a/sv-SE/dom/chrome/layout/css.properties
+++ b/sv-SE/dom/chrome/layout/css.properties
@@ -21,6 +21,8 @@ PEGatherMediaEOF=slut på medialista i @import eller @media-regel
 PEGatherMediaNotComma=Väntade sig ”,” i medialistan, men fann ”%1$S”.
 PEGatherMediaNotIdent=Väntade sig identifierare i medialistan, men fann ”%1$S”.
 PEGatherMediaReservedMediaType=Hittade reserverade nyckelordet ”%1$S” vid sökning efter mediatyp.
+PEParseSourceSizeListEOF=längdvärde för matchande mediavillkor
+PEParseSourceSizeListNotComma=Väntade sig ',' efter värdet men fann ”%1$S”.
 PEImportNotURI=Väntade sig en URI i @import-regel, men fann ”%1$S”.
 PEImportBadURI=Ogiltig URI i @import-regel: ”%1$S”.
 PEImportUnexpected=Hittade oväntat ”%1$S” i @import.
@@ -44,6 +46,14 @@ PESelectorListExtraEOF=”,” eller ”{”
 PESelectorListExtra=Väntade sig ”,” eller ”{”, men fann ”%1$S”.
 PESelectorGroupNoSelector=Väntade sig en selektor.
 PESelectorGroupExtraCombinator=Kvardröjande kombinator.
+PECounterStyleNotIdent=Väntade sig en identifierare för namn på @counter-style-regel.
+PECounterStyleBadName=Namnet på @font-face-regel kan inte vara '%1$S'.
+PECounterStyleBadBlockStart=Väntade sig "{" som början på @counter-style-regel, men fann ”%1$S”.
+PECounterStyleEOF=avslutande "}" för @counter-style-avsnitt
+PECounterDescExpected=Väntade sig en räknare-deskriptor, men fann ”%1$S”.
+PEUnknownCounterDesc=Okänd deskriptor ”%1$S” i @counter-style-regel.
+PECounterExtendsNotIdent=Väntade sig en identifierare för extends-algoritmen, men fann ”%1$S”.
+PECounterASWeight=Varje värde i beskrivningen av symboler för numrerad lista måste vara mindre än den föregående värdet. 
 PEClassSelEOF=klassnamn
 PEClassSelNotIdent=Väntade sig en identifierare för klasselektorn, men fann ”%1$S”.
 PETypeSelEOF=elementtyp
