--- a/sv-SE/services/sync/sync.properties
+++ b/sv-SE/services/sync/sync.properties
@@ -17,32 +17,32 @@ remote.notification.label = Nyligen använda flikar från datorn kommer att vara
 
 error.login.title = Fel vid inloggning
 error.login.description = Sync stötte på ett fel vid anslutningen: %1$S.  Försök igen.
-error.login.prefs.label = Inställningar
-error.login.prefs.accesskey = I
+error.login.prefs.label = &Inställningar
+error.login.prefs.accesskey = &Inställningar
 # should decide if we're going to show this
 error.logout.title = Fel vid utloggning
 error.logout.description = Sync stötte på ett fel vid anslutningen.  Det är förmodligen OK och du behöver inte gör någonting åt det.
 error.sync.title = Fel vid synkning
 error.sync.description = Sync stötte på ett fel under synkningen: %1$S.  Sync kommer automatiskt att försöka upprepa åtgärden.
 error.sync.prolonged_failure = Synkning har inte kunnat genomföras de senaste %1$S dagarna. Kontrollera dina nätverksinställningar.
-error.sync.serverStatusButton.label = Server Status\u0020
-error.sync.serverStatusButton.accesskey = v
+error.sync.serverStatusButton.label = Ser&ver Status 
+error.sync.serverStatusButton.accesskey = Ser&ver Status 
 error.sync.needUpdate.description = Du behöver uppdatera Firefox Sync för att kunna fortsätta synkningen av din data.
-error.sync.needUpdate.label = Uppdatera Firefox Sync\u0020
-error.sync.needUpdate.accesskey = U
-error.sync.tryAgainButton.label = Synka nu
-error.sync.tryAgainButton.accesskey = n
+error.sync.needUpdate.label = &Uppdatera Firefox Sync 
+error.sync.needUpdate.accesskey = &Uppdatera Firefox Sync 
+error.sync.tryAgainButton.label = Sy&nka nu
+error.sync.tryAgainButton.accesskey = Sy&nka nu
 warning.sync.quota.label = Närmar sig serverkvoten
 warning.sync.quota.description = Du är på väg att fylla serverkvoten. Välj vilken data som du vill synka.
 error.sync.quota.label = Serverkvoten överskriden
 error.sync.quota.description = Sync misslyckades eftersom serverkvoten överskreds. Välj vilken data som du vill synka.
-error.sync.viewQuotaButton.label = Visa kvot
-error.sync.viewQuotaButton.accesskey = V
+error.sync.viewQuotaButton.label = &Visa kvot
+error.sync.viewQuotaButton.accesskey = &Visa kvot
 warning.sync.eol.label = Tjänsten avslutas
 # %1: the app name (Firefox)
 warning.sync.eol.description = Din Firefox Sync-tjänst kommer snart att avslutas. Uppgradera %1$S för att fortsätta synka.
 error.sync.eol.label = Tjänsten ej tillgänglig
 # %1: the app name (Firefox)
 error.sync.eol.description = Din Firefox Sync-tjänst är inte längre tillgänglig. Du måste uppgradera %1$S för att kunna fortsätta synka.
-sync.eol.learnMore.label = Ta reda på mer
-sync.eol.learnMore.accesskey = T
+sync.eol.learnMore.label = &Ta reda på mer
+sync.eol.learnMore.accesskey = &Ta reda på mer
