--- a/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -88,7 +88,7 @@ characterencoding-button.label = Teckenkodning
 characterencoding-button.tooltiptext2 = Visa teckenkodningsalternativ
 
 email-link-button.label = E-posta länk
-email-link-button.tooltiptext3 = Maila en länk till denna sidan\u0020
+email-link-button.tooltiptext3 = Maila en länk till denna sidan 
 
 # LOCALIZATION NOTE(quit-button.tooltiptext.linux2): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
