--- a/sv-SE/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/sv-SE/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -17,6 +17,7 @@ ToolboxCanvasDebugger.label=Rityta
 
 # LOCALIZATION NOTE (ToolboxCanvasDebugger.panelLabel):
 # This is used as the label for the toolbox panel.
+ToolboxCanvasDebugger.panelLabel=Canvas-panel
 
 # LOCALIZATION NOTE (ToolboxCanvasDebugger.tooltip):
 # This string is displayed in the tooltip of the tab when the Shader Editor is
@@ -58,7 +59,7 @@ snapshotsList.saveDialogTitle=Spara ögonblicksbild av animeringsruta
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a snapshot to disk.
-snapshotsList.saveDialogJSONFilter=JSON Filer\u0020
+snapshotsList.saveDialogJSONFilter=JSON Filer 
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogAllFilter):
 # This string is displayed as a filter for saving a snapshot to disk.
