--- a/sv-SE/browser/chrome/browser/devtools/gcli.properties
+++ b/sv-SE/browser/chrome/browser/devtools/gcli.properties
@@ -179,6 +179,7 @@ subCommands=Subkommandon
 
 # LOCALIZATION NOTE: This error message is displayed when the command line is
 # cannot find a match for the parse types.
+commandParseError=Fel vid tolkning av kommandoraden
 
 # LOCALIZATION NOTE (contextDesc, contextManual, contextPrefixDesc): These
 # strings are used to describe the 'context' command and its 'prefix'
