--- a/sv-SE/browser/chrome/browser/devtools/toolbox.properties
+++ b/sv-SE/browser/chrome/browser/devtools/toolbox.properties
@@ -45,6 +45,7 @@ optionsButton.tooltip=Verktygsalternativ
 
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
+options.panelLabel=Alternativpanel för verktyg
 
 # LOCALIZATION NOTE (options.toolNotSupported): This is the template
 # used to add a * marker to the label for the Options Panel tool checkbox for the
