--- a/sv-SE/browser/chrome/browser/preferences/preferences.properties
+++ b/sv-SE/browser/chrome/browser/preferences/preferences.properties
@@ -125,8 +125,8 @@ actualAppCacheSize=Programcachen använder nu %1$S %2$S diskutrymme
 
 ###Preferences::Advanced::Update
 #LOCALIZATION NOTE: The next string is for updating in Windows 8 only instead of updateAuto1.label.  %S = brandShortName
-updateAutoDesktop.label=Automatiskt installera uppdateringar från skrivbordet %S\u0020
-updateAutoDesktop.accessKey=A
+updateAutoDesktop.label=&Automatiskt installera uppdateringar från skrivbordet %S 
+updateAutoDesktop.accessKey=&Automatiskt installera uppdateringar från skrivbordet %S 
 
 syncUnlink.title=Vill du avregistrera den här enheten?
 syncUnlink.label=Den här enheten kommer inte längre att vara kopplad till ditt Sync-konto. All personlig data, både på den här enheten och på ditt Sync-konto, kommer att bevaras.
