--- a/sv-SE/dom/chrome/plugins.properties
+++ b/sv-SE/dom/chrome/plugins.properties
@@ -20,4 +20,5 @@ mimetype_label=MIME-typ
 description_label=Beskrivning
 suffixes_label=Filändelse
 
+openH264_name=OpenH264 Video Codec tillhandahållen av Cisco Systems, Inc.
 openH264_description=Spela webvideos och använda video chatt.
