--- a/sv-SE/security/manager/chrome/pippki/pippki.properties
+++ b/sv-SE/security/manager/chrome/pippki/pippki.properties
@@ -71,7 +71,7 @@ pageInfo_Identity_Verified=Webbplatsen %S stöder autentisering för sidan som v
 pageInfo_ViewCertificate=Visa certifikatet som verifierar denna webbplats identitet.
 pageInfo_NoEncryption=Anslutningen är ej krypterad
 pageInfo_Privacy_None1=Webbplatsen %S stöder inte kryptering av sidan som visas.
-pageInfo_Privacy_None2=Information som skickas över Internet utan kryptering kan under överföringen läsas av obehöriga personer.\u0020
+pageInfo_Privacy_None2=Information som skickas över Internet utan kryptering kan under överföringen läsas av obehöriga personer. 
 pageInfo_Privacy_None3=Sidan som visas är inte krypterad.
 # LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
