--- a/sv-SE/toolkit/chrome/global/aboutSupport.properties
+++ b/sv-SE/toolkit/chrome/global/aboutSupport.properties
@@ -68,8 +68,8 @@ adapterDrivers = Adapterdrivrutin
 adapterRAM = Adapter-RAM
 driverVersion = Drivrutinsversion
 driverDate = Drivrutinsdatum
-adapterDescription2 = Adapterbeskrivning (GPU #2)\u0020
-adapterVendorID2 = Leverantörs-ID (GPU #2)\u0020
+adapterDescription2 = Adapterbeskrivning (GPU #2) 
+adapterVendorID2 = Leverantörs-ID (GPU #2) 
 adapterDeviceID2 = Enhets-ID (GPU #2)
 adapterDrivers2 = Adapterdrivrutin (GPU #2)
 adapterRAM2 = Adapter-RAM (GPU #2)
