--- a/sv-SE/toolkit/chrome/global/devtools/csscoverage.properties
+++ b/sv-SE/toolkit/chrome/global/devtools/csscoverage.properties
@@ -11,6 +11,11 @@
 csscoverageDesc=Kontrollera analysen av CSS-täckning
 csscoverageStartDesc2=Starta insamling till CSS-täckningsanalys
 csscoverageStopDesc2=Stoppa insamling till CSS-täckningsanalys
+csscoverageOneShotDesc2=Samla data till omedelbar CSS-täckningsanalys
+csscoverageToggleDesc2=Växla läge för insamling till CSS-täckningsanalys
+csscoverageReportDesc2=Visa CSS-täckningsanalysrapport
+csscoverageStartNoReloadDesc=Börja inte med att ladda om sidan
+csscoverageStartNoReloadManual=Det är bäst att börja med att ladda om den aktuella sidan då det startar testen vid ett känt läge, men det kan finnas anledningar till att inte vilja göra det (t.ex. att sidan innehåller en status som förloras om sidan laddas om)
 
 # LOCALIZATION NOTE (csscoverageRunningReply, csscoverageDoneReply): Text that
 # describes the current state of the css coverage system
@@ -24,3 +29,4 @@ csscoverageRunningError=CSS-täckningsanalys pågår redan
 csscoverageNotRunningError=CSS-täckningsanalys körs inte
 csscoverageNotRunError=CSS-täckningsanalys har inte körts
 csscoverageNoRemoteError=Målet stödjer inte CSS-täckning
+csscoverageOneShotReportError=CSS-täckningsanalysrapport är inte tillgängligt för 'oneshot'-data. Använd start/stopp.
