--- a/sv-SE/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/sv-SE/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -42,7 +42,7 @@ dontGoOfflineButton=Fortsätt uppkopplad
 dontEnterPrivateBrowsingButton=Starta inte privat surfning
 dontLeavePrivateBrowsingButton=Fortsätt med privat surfning
 downloadsCompleteTitle=Slutförda filhämtningar
-downloadsCompleteMsg=Alla filer har hämtats.\u0020
+downloadsCompleteMsg=Alla filer har hämtats. 
 
 # LOCALIZATION NOTE (infiniteRate):
 # If download speed is a JavaScript Infinity value, this phrase is used
