--- a/sv-SE/mobile/android/chrome/browser.properties
+++ b/sv-SE/mobile/android/chrome/browser.properties
@@ -26,7 +26,7 @@ alertFullScreenToast=Tryck BAKÅT för att lämna helskärmsläget
 # %S will be replaced by the name of the search engine (exposed by the current page)
 # that has been added; for example, 'Google'.
 alertSearchEngineAddedToast=”%S” har lagts till som en sökmotor
-alertSearchEngineErrorToast=Kunde inte lägga till ”%S” som sökmotor\u0020
+alertSearchEngineErrorToast=Kunde inte lägga till ”%S” som sökmotor 
 alertSearchEngineDuplicateToast=”%S” är redan en av dina sökmotorer
 
 downloadCancelPromptTitle=Avbryt hämtningen
@@ -71,7 +71,7 @@ blockPopups.label=Blockera popup-fönster
 
 # XPInstall
 xpinstallPromptWarning2=%S har stoppat platsen (%S) från att fråga om du vill installera programvara på enheten.
-xpinstallPromptWarningLocal=%S förhindrade denna addon (%S) att installera på din enhet\u0020
+xpinstallPromptWarningLocal=%S förhindrade denna addon (%S) att installera på din enhet 
 xpinstallPromptWarningDirect=%S förhindrade en addon från att installeras på din enhet.
 xpinstallPromptAllowButton=Tillåt
 xpinstallDisabledMessageLocked=Programvaruinstallationer har inaktiverats av systemadministratören.
@@ -199,7 +199,7 @@ contextmenu.shareImage=Dela bild
 contextmenu.search=%S-sökning
 contextmenu.saveImage=Spara bild
 contextmenu.setImageAs=Använd bild som
-contextmenu.addSearchEngine=Lägg till sökmotor
+contextmenu.addSearchEngine2=Lägg till som sökmotor
 contextmenu.playMedia=Spela upp
 contextmenu.pauseMedia=Pausa
 contextmenu.shareMedia=Dela video
@@ -241,16 +241,6 @@ timer.start=%S: tidur startad
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$S ms
-
-# Webapps
-webapps.installTitle=Installera program
-webapps.alertSuccess=Installationen lyckades
-# Shown when there is a generic problem installing an app
-webapps.installError=Fel vid installation av program
-# Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Ogiltigt programmanifest
-# Shown when a network error prevented installing an app
-webapps.networkInstallError=Kunde inte hämta manifest
 
 # Click to play plugins
 clickToPlayPlugins.message2=%S har innehåll för en insticksmodul. Vill du aktivera det?
