[sv-SE] update from Pootle (mobile)

--- a/sv-SE/mobile/android/chrome/browser.properties
+++ b/sv-SE/mobile/android/chrome/browser.properties
@@ -26,7 +26,7 @@ alertFullScreenToast=Tryck BAKÅT för att lämna helskärmsläget
 # %S will be replaced by the name of the search engine (exposed by the current page)
 # that has been added; for example, 'Google'.
 alertSearchEngineAddedToast=”%S” har lagts till som en sökmotor
-alertSearchEngineErrorToast=Kunde inte lägga till ”%S” som sökmotor 
+alertSearchEngineErrorToast=Kunde inte lägga till ”%S” som sökmotor\u0020
 alertSearchEngineDuplicateToast=”%S” är redan en av dina sökmotorer
 
 downloadCancelPromptTitle=Avbryt hämtningen
@@ -71,7 +71,7 @@ blockPopups.label=Blockera popup-fönster
 
 # XPInstall
 xpinstallPromptWarning2=%S har stoppat platsen (%S) från att fråga om du vill installera programvara på enheten.
-xpinstallPromptWarningLocal=%S förhindrade denna addon (%S) att installera på din enhet 
+xpinstallPromptWarningLocal=%S förhindrade denna addon (%S) att installera på din enhet\u0020
 xpinstallPromptWarningDirect=%S förhindrade en addon från att installeras på din enhet.
 xpinstallPromptAllowButton=Tillåt
 xpinstallDisabledMessageLocked=Programvaruinstallationer har inaktiverats av systemadministratören.
