--- a/sv-SE/mobile/android/chrome/sync.properties
+++ b/sv-SE/mobile/android/chrome/sync.properties
@@ -34,7 +34,7 @@ sync.message.notabs=Inga flikar från andra datorer.
 
 # LOCALIZATION NOTE (promoBanner.message.text): First part of the message displayed in a
 # banner on about:home. The final space separates this text from the link.
-promoBanner.message.text=Sync är helt ny och enklare än någonsin. 
+promoBanner.message.text=Sync är helt ny och enklare än någonsin.\u0020
 
 # LOCALIZATION NOTE (promoBanner.message.link): Second part of the message, styled as a link.
 promoBanner.message.link=Tryck här för att läsa mer
