Missing browser strings

--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -512,13 +512,11 @@ getUserMedia.shareEntireScreen.label = Celoten zaslon
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareCamera.message = Ali dovolite uporabo kamere na strani %S?
-getUserMedia.shareMicrophone.message = Ali dovolite uporabo mikrofona na strani %S?
-getUserMedia.shareCameraAndMicrophone.message = Ali dovolite uporabo kamere in mikrofona na strani %S?
-getUserMedia.noVideo.label = Brez videa
-getUserMedia.noAudio.label = Brez zvoka
 getUserMedia.shareSelectedDevices.label = Uporabi izbrano napravo;Uporabi izbrane naprave
 getUserMedia.shareSelectedDevices.accesskey = U
+getUserMedia.shareScreen.label = Uporaba zaslona
+getUserMedia.shareWindow.label = Uporaba izbranega okna
+getUserMedia.shareSelectedItems.label = Uporaba izbranih predmetov
 getUserMedia.always.label = Vedno uporabljaj
 getUserMedia.always.accesskey = A
 getUserMedia.denyRequest.label = Tokrat ne uporabi
@@ -528,6 +526,8 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Trenutno je dovoljena uporaba kamere na tej strani.
 getUserMedia.sharingMicrophone.message2 = Trenutno je dovoljena uporaba mikrofona na tej strani.
 getUserMedia.sharingCameraAndMicrophone.message2 = Trenutno je dovoljena uporaba kamere in mikrofona na tej strani.
+getUserMedia.sharingScreen.message = Trenutno je dovoljena uporaba zaslona na tej strani.
+getUserMedia.sharingWindow.message = Trenutno je dovoljena uporaba okna na tej strani.
 getUserMedia.continueSharing.label = Nadaljuj z uporabo
 getUserMedia.continueSharing.accesskey = A
 getUserMedia.stopSharing.label = Končaj uporabo
