--- a/it/browser/chrome/browser/loop/loop.properties
+++ b/it/browser/chrome/browser/loop/loop.properties
@@ -27,7 +27,7 @@ connection_error_see_console_notification = Chiamata non riuscita, consultare la
 legal_text_and_links2 = Utilizzando questo prodotto si accettano i {{terms_of_use}} e l’{{privacy_notice}}.
 legal_text_tos = termini di utilizzo
 legal_text_privacy = informativa sulla privacy
-feedback_call_experience_heading = Come valuti la qualità della chiamata?
+feedback_call_experience_heading2 = Come valuti la qualità della conversazione?
 feedback_what_makes_you_sad = Che cosa non ha funzionato?
 feedback_thank_you_heading = Grazie per averci fornito la tua opinione.
 feedback_category_audio_quality = Qualità audio
