[S] loop: Bug 1060525 - Various string changes for Loop based on UX feedback

--- a/it/browser/chrome/browser/loop/loop.properties
+++ b/it/browser/chrome/browser/loop/loop.properties
@@ -39,8 +39,8 @@ feedback_custom_category_text_placeholder = Descrivi il problema
 feedback_submit_button = Invia
 feedback_back_button = Indietro
 feedback_window_will_close_in2 = Questa finestra verrà chiusa in {{countdown}} secondo;Questa finestra verrà chiusa in {{countdown}} secondi
-share_email_subject2 = Invito a una conversazione
-share_email_body2 = Fai clic su questo link per chiamarmi:\r\n\r\n{{callUrl}}
+share_email_subject3 = Invito ad avviare una conversazione
+share_email_body3 = Per accettare questo invito e avviare la conversazione, copia o fai clic sul link seguente:\r\n\r\n{{callUrl}}
 share_button = Invia email
 copy_url_button = Copia
 copied_url_button = Copiato
