[S] loop: Bug 1060452 - Add generic-failure string for Loop clients

--- a/it/browser/chrome/browser/loop/loop.properties
+++ b/it/browser/chrome/browser/loop/loop.properties
@@ -24,6 +24,10 @@ call_has_ended = La chiamata si è conclusa.
 cannot_start_call_session_not_ready = Impossibile avviare la chiamata, la sessione non è pronta.
 network_disconnected = La connessione di rete è stata interrotta senza preavviso.
 connection_error_see_console_notification = Chiamata non riuscita, consultare la console per ulteriori dettagli.
+generic_failure_with_reason = Si è verificato un errore. È possibile riprovare o inviare un link tramite email per essere raggiungibili più tardi.
+generic_failure_no_reason = Si è verificato un errore. Riprovare?
+retry = Riprova
+report_user = Segnala utente
 legal_text_and_links2 = Utilizzando questo prodotto si accettano i {{terms_of_use}} e l’{{privacy_notice}}.
 legal_text_tos = termini di utilizzo
 legal_text_privacy = informativa sulla privacy
