--- a/sl/browser/chrome/browser/devtools/debugger.properties
+++ b/sl/browser/chrome/browser/devtools/debugger.properties
@@ -15,6 +15,10 @@
 # displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxDebugger.label=Razhroščevalnik
 
+# LOCALIZATION NOTE (ToolboxDebugger.panelLabel):
+# This is used as the label for the toolbox panel.
+ToolboxDebugger.panelLabel=Plošča razhroščevalnika
+
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
 DebuggerWindowTitle=Razhroščevalnik brskalnika
@@ -298,7 +302,7 @@ variablesSeparatorLabel=:
 
 # LOCALIZATION NOTE (watchExpressionsSeparatorLabel): The text that is displayed
 # in the watch expressions list as a separator between the code and evaluation.
-watchExpressionsSeparatorLabel=\ →
+watchExpressionsSeparatorLabel= →
 
 # LOCALIZATION NOTE (functionSearchSeparatorLabel): The text that is displayed
 # in the functions search panel as a separator between function's inferred name
