--- a/sl/browser/chrome/browser/devtools/inspector.properties
+++ b/sl/browser/chrome/browser/devtools/inspector.properties
@@ -37,6 +37,11 @@ inspector.label=Pregledovalnik
 inspector.commandkey=I
 inspector.accesskey=I
 
+# LOCALIZATION NOTE (inspector.panelLabel.*)
+# Labels applied to the panel and views within the panel in the toolbox
+inspector.panelLabel=Plošča pregledovalnika
+inspector.panelLabel.markupView=Označevalni pogled
+
 # LOCALIZATION NOTE (markupView.more.*)
 # When there are too many nodes to load at once, we will offer to
 # show all the nodes.
@@ -46,3 +51,6 @@ inspector.tooltip=Pregledovalnik sloga in DOM
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
 previewTooltip.image.brokenImage=Slike ni bilo mogoče naložiti
+
+#LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+eventsTooltip.openInDebugger=Odpri v razhroščevalniku
