--- a/sl/browser/chrome/browser/devtools/projecteditor.properties
+++ b/sl/browser/chrome/browser/devtools/projecteditor.properties
@@ -16,10 +16,34 @@
 # file / folder to be deleted
 projecteditor.deleteLabel=Zbriši
 
+# LOCALIZATION NOTE (projecteditor.deletePromptTitle):
+# This string is displayed as as the title of the confirm prompt that checks
+# to make sure if a file or folder should be removed.
+projecteditor.deletePromptTitle=Zbriši
+
+# LOCALIZATION NOTE (projecteditor.deleteFolderPromptMessage):
+# This string is displayed as as the message of the confirm prompt that checks
+# to make sure if a folder should be removed.
+projecteditor.deleteFolderPromptMessage=Ali ste prepričani, da želite zbrisati to mapo?
+
+# LOCALIZATION NOTE (projecteditor.deleteFilePromptMessage):
+# This string is displayed as as the message of the confirm prompt that checks
+# to make sure if a file should be removed.
+projecteditor.deleteFilePromptMessage=Ali ste prepričani, da želite zbrisati to datoteko?
+
 # LOCALIZATION NOTE (projecteditor.newLabel):
 # This string is displayed as a context menu item for adding a new file to
 # the directory
 projecteditor.newLabel=Novo …
+
+# LOCALIZATION NOTE (projecteditor.saveLabel):
+# This string is displayed as a menu item for saving the current file.
+projecteditor.saveLabel=Shrani
+
+# LOCALIZATION NOTE (projecteditor.saveAsLabel):
+# This string is displayed as a menu item for saving the current file
+# with a new name.
+projecteditor.saveAsLabel=Shrani kot …
 
 # LOCALIZATION NOTE (projecteditor.selectFileLabel):
 # This string is displayed as the title on the file picker when saving a file
