--- a/sl/browser/chrome/browser/devtools/app-manager.properties
+++ b/sl/browser/chrome/browser/devtools/app-manager.properties
@@ -29,7 +29,7 @@ validator.invalidProjectType=Neznana vrsta projekta '%S'
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=V manifestu manjka obvezen 'name'.
 validator.missIconsManifestProperty=V manifestu manjka 'icons'.
-validator.missIconMarketplace=Za objavo aplikacij v Marketplacu potrebujete ikono v velikosti vsaj 128px
+validator.missIconMarketplace2=za objavo aplikacij v Marketplacu potrebujete ikono v velikosti 128px
 validator.invalidAppType=Neznana vrsta aplikacije: '%S'.
 validator.invalidHostedPriviledges=Gostovana aplikacija ne more biti vrste '%S'.
 validator.noCertifiedSupport=Aplikacije 'certified' niso v celoti podprte v upravitelju aplikacij.
