--- a/sl/browser/chrome/browser/devtools/gcli.properties
+++ b/sl/browser/chrome/browser/devtools/gcli.properties
@@ -230,6 +230,10 @@ helpIntro=GCLI je poskus uporabne ukazne vrstice za spletne razvijalce.
 # of the matching sub-commands
 subCommands=Pod-ukazi
 
+# LOCALIZATION NOTE: This error message is displayed when the command line is
+# cannot find a match for the parse types.
+commandParseError=Napaka pri razhroščevanju v ukazni vrstici
+
 # LOCALIZATION NOTE (contextDesc): A very short description of the 'context'
 # command. This string is designed to be shown in a menu alongside the command
 # name, which is why it should be as short as possible. See contextManual for
