--- a/sl/browser/chrome/browser/devtools/sourceeditor.properties
+++ b/sl/browser/chrome/browser/devtools/sourceeditor.properties
@@ -49,6 +49,15 @@ annotation.currentLine=Trenutna vrstica
 # user-defined lines.
 annotation.debugLocation.title=Trenuten korak: %S
 
+# LOCALIZATION NOTE  (autocompletion.docsLink): This is the text shown on
+# the link inside of the documentation popup.  If you type 'document' in Scratchpad
+# then press Shift+Space you can see the popup.
+autocompletion.docsLink=dokumentacija
+
+# LOCALIZATION NOTE  (autocompletion.notFound): This is the text shown in
+# the documentation popup if Tern fails to find a type for the object.
+autocompletion.notFound=ni zadetkov
+
 # LOCALIZATION NOTE  (jumpToLine.commandkey): This the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to jump to
 # a specific line in the editor.
@@ -89,6 +98,6 @@ moveLineDown.commandkey=Alt-Dol
 # in conjunction with Ctrl for autocompletion.
 autocompletion.commandkey=Presledek
 
-# LOCALIZATION NOTE  (showInformation.commandkey): This is the key to use to
+# LOCALIZATION NOTE  (showInformation2.commandkey): This is the key to use to
 # show more information, like type inference.
-showInformation.commandkey=Shift-Presledek
+showInformation2.commandkey=Shift-Ctrl-Presledek
