--- a/sl/browser/chrome/browser/devtools/toolbox.properties
+++ b/sl/browser/chrome/browser/devtools/toolbox.properties
@@ -35,9 +35,17 @@ toolbox.titleTemplate=%1$S - %2$S
 # name when no tool is selected.
 toolbox.defaultTitle=Razvojna orodja
 
+# LOCALIZATION NOTE (toolbox.label): This is used as the label for the
+# toolbox as a whole
+toolbox.label=Razvojna orodja
+
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the optiosn panel tab.
 optionsButton.tooltip=Možnosti razvojnih orodij
+
+# LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
+# toolbox panel.
+options.panelLabel=Plošča možnosti razvojnih orodij
 
 # LOCALIZATION NOTE (options.toolNotSupported): This is the template
 # used to add a * marker to the label for the Options Panel tool checkbox for the
