--- a/sl/browser/chrome/browser/devtools/webconsole.properties
+++ b/sl/browser/chrome/browser/devtools/webconsole.properties
@@ -169,6 +169,10 @@ MenuWebconsole.label=Spletna konzola
 # label of the tab in the devtools window.
 ToolboxTabWebconsole.label=Konzola
 
+# LOCALIZATION NOTE (ToolboxWebConsole.panelLabel): the string used as the
+# label for the toolbox panel.
+ToolboxWebConsole.panelLabel=Plošča konzole
+
 # LOCALIZATION NOTE (ToolboxWebconsole.tooltip):
 # This string is displayed in the tooltip of the tab when the web console is
 # displayed inside the developer tools window.
