--- a/sl/browser/chrome/browser/devtools/styleeditor.properties
+++ b/sl/browser/chrome/browser/devtools/styleeditor.properties
@@ -73,6 +73,10 @@ saveStyleSheet.commandkey=S
 # displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxStyleEditor.label=Urejevalnik sloga
 
+# LOCALIZATION NOTE (ToolboxStyleEditor.panelLabel):
+# This is used as the label for the toolbox panel.
+ToolboxStyleEditor.panelLabel=Plošča urejevalnika sloga
+
 # LOCALIZATION NOTE (ToolboxStyleEditor.tooltip2):
 # This string is displayed in the tooltip of the tab when the style editor is
 # displayed inside the developer tools window.
