--- a/sl/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sl/browser/chrome/browser/devtools/gclicommands.properties
@@ -128,6 +128,113 @@ screenshotCopied=Kopirano v odložišče.
 # LOCALIZATION NOTE (screenshotTooltip) Text displayed as tooltip for screenshot button in devtools ToolBox.
 screenshotTooltip=Zajemi posnetek celotne strani
 
+# LOCALIZATION NOTE (highlightDesc) A very short description of the
+# 'highlight' command. See highlightManual for a fuller description of what
+# it does. This string is designed to be shown in a menu alongside the
+# command name, which is why it should be as short as possible.
+highlightDesc=Označi vozlišča
+
+# LOCALIZATION NOTE (highlightManual) A fuller description of the 'highlight'
+# command, displayed when the user asks for help on what it does.
+highlightManual=Označi vozlišča, ki ustrezajo izbirniku
+
+# LOCALIZATION NOTE (highlightSelectorDesc) A very short string to describe
+# the 'selector' parameter to the 'highlight' command, which is displayed in
+# a dialog when the user is using this command.
+highlightSelectorDesc=Izbirnik CSS
+
+# LOCALIZATION NOTE (highlightSelectorManual) A fuller description of the
+# 'selector' parameter to the 'highlight' command, displayed when the user
+# asks for help on what it does.
+highlightSelectorManual=Izbirnik CSS za izbor vozlišč na strani
+
+# LOCALIZATION NOTE (highlightOptionsDesc) The title of a set of options to
+# the 'highlight' command, displayed as a heading to the list of option.
+highlightOptionsDesc=Možnosti
+
+# LOCALIZATION NOTE (highlightHideGuidesDesc) A very short string to describe
+# the 'hideguides' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightHideGuidesDesc=Skrij vodila
+
+# LOCALIZATION NOTE (highlightHideGuidesManual) A fuller description of the
+# 'hideguides' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightHideGuidesManual=Skrij vodila okoli označenih vozlišč
+
+# LOCALIZATION NOTE (highlightShowInfoBarDesc) A very short string to describe
+# the 'showinfobar' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightShowInfoBarDesc=Prikaži informacije o vozliščih
+
+# LOCALIZATION NOTE (highlightShowInfoBarManual) A fuller description of the
+# 'showinfobar' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightShowInfoBarManual=Prikaži oblaček s podatki nad označenim vozliščem (vsebuje ime oznake, atribute in mere)
+
+# LOCALIZATION NOTE (highlightShowAllDesc) A very short string to describe
+# the 'showall' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightShowAllDesc=Prikaži vse zadetke
+
+# LOCALIZATION NOTE (highlightShowAllManual) A fuller description of the
+# 'showall' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightShowAllManual=Če preveč vozlišč ustreza izbirniku, je prikazanih samo prvih 100, da ne bi prišlo do upočasnitev strani. Uporabite to možnost za prikaz vseh zadetkov
+
+# LOCALIZATION NOTE (highlightRegionDesc) A very short string to describe the
+# 'region' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightRegionDesc=Področje škatlastega modela
+
+# LOCALIZATION NOTE (highlightRegionManual) A fuller description of the 'region'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightRegionManual=Katero področje škatlastega modela naj bo označeno: 'content', 'padding', 'border' ali 'margin'
+
+# LOCALIZATION NOTE (highlightFillDesc) A very short string to describe the
+# 'fill' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightFillDesc=Slog polnila
+
+# LOCALIZATION NOTE (highlightFillManual) A fuller description of the 'fill'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightFillManual=Prepiši privzet slog polnila z barvo po meri
+
+# LOCALIZATION NOTE (highlightKeepDesc) A very short string to describe the
+# 'keep' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightKeepDesc=Obdrži obstoječe označevalnike
+
+# LOCALIZATION NOTE (highlightKeepManual) A fuller description of the 'keep'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightKeepManual=Obstoječi označevalniki so ob uporabi ukaza privzeto skriti, razen če nastavite to možnost
+
+# LOCALIZATION NOTE (highlightOutputConfirm) A confirmation message for the
+# 'highlight' command, displayed to the user once the command has been entered,
+# informing the user how many nodes have been highlighted successfully and how
+# to turn highlighting off
+highlightOutputConfirm=Označenih vozlišč: %1$S
+
+# LOCALIZATION NOTE (highlightOutputMaxReached) A confirmation message for the
+# 'highlight' command, displayed to the user once the command has been entered,
+# informing the user how many nodes have been highlighted successfully and that
+# some nodes could not be highlighted due to the maximum number of nodes being
+# reached, and how to turn highlighting off
+highlightOutputMaxReached=Označenih je %2$S vozlišč od %1$S zadetkov. Uporabite možnost '--showall' za prikaz vseh
+
+# LOCALIZATION NOTE (unhighlightDesc) A very short description of the
+# 'unhighlight' command. See unhighlightManual for a fuller description of what
+# it does. This string is designed to be shown in a menu alongside the
+# command name, which is why it should be as short as possible.
+unhighlightDesc=Počisti oznake vozlišč
+
+# LOCALIZATION NOTE (unhighlightManual) A fuller description of the 'unhighlight'
+# command, displayed when the user asks for help on what it does.
+unhighlightManual=Počisti oznake vozlišč, ki so bila prehodno označena z ukazom 'highlight'
+
 # LOCALIZATION NOTE (restartBrowserDesc) A very short description of the
 # 'restart' command. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible.
@@ -1389,3 +1496,29 @@ mediaEmulateDesc=Emuliraj navedeno vrsto predstavnosti CSS
 mediaEmulateManual=Oglejte si dokument, kot bi bil prikazan na napravi, ki podpira navedeno vrsto predstavnosti, z uporabljenimi ustreznimi pravili CSS.
 mediaEmulateType=Vrsta predstavnosti za emulacijo
 mediaResetDesc=Končaj emulacijo vrste predstavnosti CSS
+
+# LOCALIZATION NOTE (injectDesc, injectManual, injectLibraryDesc, injectLoaded,
+# injectFailed) These strings describe the 'inject' commands and all available
+# parameters.
+injectDesc=Vstavi priljubljene knjižnice v stran
+injectManual2=Vstavi priljubljene knjižnice v vsebino spletne strani, do katerih lahko dostopate tudi iz konzole.
+injectLibraryDesc=Izberite knjižnico, ki jo želite vstaviti, ali vnesite URI skripte
+injectLoaded=Knjižnica %1$S naložena
+injectFailed=Napaka pri nalaganju knjižnice %1$S - Neveljaven URI
+
+# LOCALIZATION NOTE (folderDesc, folderOpenDesc, folderOpenDir,
+# folderOpenProfileDesc) These strings describe the 'folder' commands and
+# all available parameters.
+folderDesc=Odpri mape
+folderOpenDesc=Odpri pot do mape
+folderOpenDir=Pot do mape
+folderOpenProfileDesc=Odpri mapo s profilom
+
+# LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
+# of the 'folder open' command with an invalid folder path.
+folderInvalidPath=Vnesite veljavno pot
+
+# LOCALIZATION NOTE (folderOpenDirResult) A very short string used to
+# describe the result of the 'folder open' command.
+# The argument (%1$S) is the folder path.
+folderOpenDirResult=Odprto: %1$S
