[S] mobile: Bug 1054912 - Change 'Cast to' term to 'Send to ' in-product

--- a/it/mobile/android/chrome/browser.properties
+++ b/it/mobile/android/chrome/browser.properties
@@ -134,7 +134,7 @@ contextmenu.unmute = Attiva audio
 contextmenu.saveVideo = Salva video
 contextmenu.saveAudio = Salva audio
 contextmenu.addToContacts = Aggiungi ai contatti
-contextmenu.castToScreen = Trasmetti a schermo
+contextmenu.sendToDevice = Invia a dispositivo
 contextmenu.copy = Copia
 contextmenu.cut = Taglia
 contextmenu.selectAll = Seleziona tutto
