[S] mobile: Bug 1054912 - Change 'Cast to' term to 'Send to ' in-product (missed one string)

--- a/it/mobile/android/chrome/browser.properties
+++ b/it/mobile/android/chrome/browser.properties
@@ -103,7 +103,7 @@ password.save = Salva
 password.dontSave = Non salvare
 browser.menu.showCharacterEncoding = false
 selectionHelper.textCopied = Testo copiato negli appunti
-casting.prompt = Trasmetti a dispositivo
+casting.sendToDevice = Invia a dispositivo
 casting.mirrorTab = Duplica scheda
 casting.mirrorTabStop = Interrompi duplicazione
 contextmenu.openInNewTab = Apri link in nuova scheda
