[desktop] Loop, round 2

--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -31,11 +31,21 @@ display_name_guest=Invité
 display_name_dnd_status=Ne pas déranger
 display_name_available_status=Disponible
 
-unable_retrieve_url=Désolé, nous n'avons pas pu récupérer d'url d'appel.
-## LOCALIZATION NOTE(session_expired_error_description): This may be displayed
-## in a rare error instance at the top of the panel here:
+
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=Désolé, nous n'avons pas pu récupérer d'url d'appel.
 session_expired_error_description=Session expirée. Toutes les URL précédemment créées et partagées ne fonctionneront plus.
+could_not_authenticate=Authentification impossible
+password_changed_question=Avez-vous modifié votre mot de passe ?
+try_again_later=Veuillez réessayer plus tard
+could_not_connect=Connexion au serveur impossible
+check_internet_connection=Veuillez vérifier votre connexion Internet
+login_expired=Votre identifiant a expiré
+service_not_available=Service actuellement indisponible
+problem_accessing_account=Une erreur s'est produite lors de l'accès à votre compte
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
@@ -159,8 +169,8 @@ audio_call_menu_button=Conversation audio
 video_call_menu_button=Conversation vidéo
 
 # Conversation Window Strings
-begin_call_prompt=Prêt à lancer votre conversation ?
-incoming_call_title=Appel entrant…
+initiate_call_button_label2=Prêt à démarrer votre conversation ?
+incoming_call_title2=Demande de conversation
 incoming_call=Appel entrant
 incoming_call_accept_button=Accepter
 incoming_call_accept_audio_only_tooltip=Accepter en mode audio
@@ -173,27 +183,66 @@ unmute_local_audio_button_title=Reprendre la diffusion audio
 mute_local_video_button_title=Couper la diffusion vidéo
 unmute_local_video_button_title=Reprendre la diffusion vidéo
 
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Conversation avec {{contactName}}
+
+# Outgoing conversation
+
+outgoing_call_title=Démarrer une conversation ?
+initiate_audio_video_call_button2=Démarrer
+initiate_audio_video_call_tooltip2=Démarrer une conversation vidéo
+initiate_audio_call_button2=Conversation audio
+initiate_call_cancel_button=Annuler
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Connexion…
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Sonnerie…
+
 peer_ended_conversation2=Votre correspondant a mis fin à la conversation.
 conversation_has_ended=Votre conversation est terminée.
 restart_call=Rappeler
 
+generic_failure_title=Quelque chose s'est mal passé.
+generic_failure_with_reason2=Vous pouvez réessayer ou envoyer par message électronique un lien permettant d'être contacté plus tard.
+generic_failure_no_reason2=Voulez-vous réessayer ?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Cette personne n'est pas en ligne
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=Votre appel n'a pas abouti.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Réessayer
+email_link_button=Envoyer lien
+cancel_button=Annuler
+
 cannot_start_call_session_not_ready=Impossible de passer l'appel, la session n'est pas prête.
 network_disconnected=La connexion réseau a été brusquement interrompue.
-
 connection_error_see_console_notification=Échec de l'appel ; consultez la console pour plus de détails.
-generic_failure_with_reason=Quelque chose s'est mal passé. Vous pouvez réessayer ou envoyer un message électronique contenant un lien permettant d'être contacté plus tard.
-generic_failure_no_reason=Quelque chose s'est mal passé. Voulez-vous réessayer ?
-retry=Réessayer
-report_user=Signaler l'utilisateur
 
-
-## LOCALIZATION NOTE (legal_text_and_links2): In this item, don't translate the
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
-## from legal_text_tos and legal_text_privacy.
-legal_text_and_links2=En utilisant ce produit vous acceptez les {{terms_of_use}} \
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=En utilisant {{clientShortname}} vous acceptez les {{terms_of_use}} \
   et la {{privacy_notice}}.
 legal_text_tos = conditions d'utilisation
 legal_text_privacy = politique de confidentialité
+client_shortname_fallback=ce produit
 
 feedback_call_experience_heading2=Comment s'est passée votre conversation ?
 feedback_what_makes_you_sad=Qu'est-ce qui vous a gêné ?
@@ -211,3 +260,10 @@ feedback_back_button=Retour
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
 feedback_window_will_close_in2=Cette fenêtre se fermera dans {{countdown}} seconde;Cette fenêtre se fermera dans {{countdown}} secondes
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Rappeler
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Signaler l'utilisateur
