[mobile] UI update

--- a/fr/mobile/android/chrome/browser.properties
+++ b/fr/mobile/android/chrome/browser.properties
@@ -175,7 +175,9 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Texte copié dans le presse-papiers
 
 # Casting
-casting.prompt=Diffuser sur l'appareil
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Envoyer à l'appareil
 
 # Context menu
 contextmenu.openInNewTab=Ouvrir dans un nouvel onglet
@@ -206,7 +208,9 @@ contextmenu.unmute=Audible
 contextmenu.saveVideo=Enregistrer la vidéo
 contextmenu.saveAudio=Enregistrer le fichier audio
 contextmenu.addToContacts=Ajouter aux contacts
-contextmenu.castToScreen=Diffuser sur l'écran
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Envoyer à l'appareil
 
 contextmenu.copy=Copier
 contextmenu.cut=Couper
