Bug 670555 - вади перекладу Firefox 5

--- a/uk/toolkit/chrome/mozapps/update/updates.properties
+++ b/uk/toolkit/chrome/mozapps/update/updates.properties
@@ -80,7 +80,7 @@ updatesfound_major.title=Доступна нова версія
 
 installSuccess=Оновлення було успішно встановлене
 installPending=Установка не завершена
-patchApplyFailure=Оновлення не може бути встановлене (застосування патча не вдалося)
+patchApplyFailure=Оновлення не може бути встановлене (застосування не вдалося)
 
 # LOCALIZATION NOTE: When present %S is the update name provided by the remote
 # update xml for the following
